[package]
name = "farmio"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17"
tokio = { version = "1.47", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
